crates/adr-hunks/tests/snapshots/call__all_hunks_pr0003_api.snap
---
source: crates/adr-hunks/tests/call.rs
expression: hunks
---
[
  {
    "id": "[id]",
    "kind": {
      "kind": "api",
      "node": 2,
      "before_signature": "async function createUser(input: CreateUserInput): Promise<{ id: string }>",
      "after_signature": "async function createUser(input: CreateUserInput): Promise<{ id: string; tenantId: string }>"
    },
    "provenance": {
      "source": "adr-hunks/api",
      "version": "0.1.0",
      "pass_id": "hunks",
      "hash": "[hash]"
    }
  }
]
